// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GaugeForm component should render a form to set up a gauge and a numberGaugeForm below 1`] = `
<div
  className="gauges-vote-form"
>
  <Translate
    number={2}
    value="administration.gauge"
  />
  <div
    className="flex margin-m"
  >
    <FormControlWithLabel
      helperUrl=""
      label="Missing translation: administration.gaugeVoteInstructions"
      labelAlwaysVisible={false}
      onChange={[Function]}
      required={true}
      type="text"
      validationErrors={null}
      value="Please vote on this numeral gauge"
    />
    <Helper
      additionalTextClasses="helper-text-only"
      classname=""
      helperText="Missing translation: administration.helpers.gaugeVoteInstructions"
      helperUrl="/static2/img/helpers/helper6.png"
      label=""
    />
  </div>
  <FormGroup
    bsClass="form-group"
  >
    <div
      className="flex"
    >
      <label
        htmlFor="dropdown-1234"
      >
        <Translate
          value="administration.nbTicks"
        />
      </label>
    </div>
    <SplitButton
      id="dropdown-1234"
      onSelect={[Function]}
      required={true}
      title={10}
    >
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        eventKey={2}
        header={false}
      >
        2
      </MenuItem>
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        eventKey={3}
        header={false}
      >
        3
      </MenuItem>
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        eventKey={4}
        header={false}
      >
        4
      </MenuItem>
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        eventKey={5}
        header={false}
      >
        5
      </MenuItem>
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        eventKey={6}
        header={false}
      >
        6
      </MenuItem>
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        eventKey={7}
        header={false}
      >
        7
      </MenuItem>
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        eventKey={8}
        header={false}
      >
        8
      </MenuItem>
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        eventKey={9}
        header={false}
      >
        9
      </MenuItem>
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        eventKey={10}
        header={false}
      >
        10
      </MenuItem>
    </SplitButton>
  </FormGroup>
  <div
    className="margin-m"
  >
    <Radio
      bsClass="radio"
      checked={false}
      disabled={false}
      inline={false}
      name="gauge-type-1234"
      onChange={[Function]}
      title=""
    >
      <Translate
        value="administration.textValue"
      />
    </Radio>
    <Radio
      bsClass="radio"
      checked={true}
      disabled={false}
      inline={false}
      name="gauge-type-1234"
      onChange={[Function]}
      title=""
    >
      <Translate
        value="administration.numberValue"
      />
    </Radio>
  </div>
  <DumbNumberGaugeForm
    handleMaxChange={[Function]}
    handleMinChange={[Function]}
    handleUnitChange={[Function]}
    id="1234"
    maximum={undefined}
    minimum={undefined}
    unit={undefined}
  />
  <div
    className="separator"
  />
</div>
`;

exports[`GaugeForm component should render a form to set up a gauge and a textGaugeForm below 1`] = `
<div
  className="gauges-vote-form"
>
  <Translate
    number={2}
    value="administration.gauge"
  />
  <div
    className="flex margin-m"
  >
    <FormControlWithLabel
      helperUrl=""
      label="Missing translation: administration.gaugeVoteInstructions"
      labelAlwaysVisible={false}
      onChange={[Function]}
      required={true}
      type="text"
      validationErrors={null}
      value="Please vote on this textual gauge"
    />
    <Helper
      additionalTextClasses="helper-text-only"
      classname=""
      helperText="Missing translation: administration.helpers.gaugeVoteInstructions"
      helperUrl="/static2/img/helpers/helper6.png"
      label=""
    />
  </div>
  <FormGroup
    bsClass="form-group"
  >
    <div
      className="flex"
    >
      <label
        htmlFor="dropdown-5678"
      >
        <Translate
          value="administration.nbTicks"
        />
      </label>
    </div>
    <SplitButton
      id="dropdown-5678"
      onSelect={[Function]}
      required={true}
      title={2}
    >
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        eventKey={2}
        header={false}
      >
        2
      </MenuItem>
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        eventKey={3}
        header={false}
      >
        3
      </MenuItem>
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        eventKey={4}
        header={false}
      >
        4
      </MenuItem>
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        eventKey={5}
        header={false}
      >
        5
      </MenuItem>
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        eventKey={6}
        header={false}
      >
        6
      </MenuItem>
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        eventKey={7}
        header={false}
      >
        7
      </MenuItem>
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        eventKey={8}
        header={false}
      >
        8
      </MenuItem>
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        eventKey={9}
        header={false}
      >
        9
      </MenuItem>
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        eventKey={10}
        header={false}
      >
        10
      </MenuItem>
    </SplitButton>
  </FormGroup>
  <div
    className="margin-m"
  >
    <Radio
      bsClass="radio"
      checked={true}
      disabled={false}
      inline={false}
      name="gauge-type-5678"
      onChange={[Function]}
      title=""
    >
      <Translate
        value="administration.textValue"
      />
    </Radio>
    <Radio
      bsClass="radio"
      checked={false}
      disabled={false}
      inline={false}
      name="gauge-type-5678"
      onChange={[Function]}
      title=""
    >
      <Translate
        value="administration.numberValue"
      />
    </Radio>
  </div>
  <DumbTextGaugeForm
    choices={
      Immutable.List [
        Immutable.Map {
          id: "2233",
          labelEntries: Immutable.List [
          ],
          value: 1,
        },
        Immutable.Map {
          id: "3344",
          labelEntries: Immutable.List [
          ],
          value: 2,
        },
      ]
    }
    handleGaugeChoiceLabelChange={undefined}
  />
  <div
    className="separator"
  />
</div>
`;

exports[`GaugeForm component should render a gauge form with no radio if canChangeType is false 1`] = `
<div
  className="gauges-vote-form"
>
  <Translate
    number={2}
    value="administration.gauge"
  />
  <div
    className="flex margin-m"
  >
    <FormControlWithLabel
      helperUrl=""
      label="Missing translation: administration.gaugeVoteInstructions"
      labelAlwaysVisible={false}
      onChange={[Function]}
      required={true}
      type="text"
      validationErrors={null}
      value="Please vote on this textual gauge"
    />
    <Helper
      additionalTextClasses="helper-text-only"
      classname=""
      helperText="Missing translation: administration.helpers.gaugeVoteInstructions"
      helperUrl="/static2/img/helpers/helper6.png"
      label=""
    />
  </div>
  <FormGroup
    bsClass="form-group"
  >
    <div
      className="flex"
    >
      <label
        htmlFor="dropdown-5678"
      >
        <Translate
          value="administration.nbTicks"
        />
      </label>
    </div>
    <SplitButton
      id="dropdown-5678"
      onSelect={[Function]}
      required={true}
      title={2}
    >
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        eventKey={2}
        header={false}
      >
        2
      </MenuItem>
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        eventKey={3}
        header={false}
      >
        3
      </MenuItem>
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        eventKey={4}
        header={false}
      >
        4
      </MenuItem>
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        eventKey={5}
        header={false}
      >
        5
      </MenuItem>
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        eventKey={6}
        header={false}
      >
        6
      </MenuItem>
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        eventKey={7}
        header={false}
      >
        7
      </MenuItem>
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        eventKey={8}
        header={false}
      >
        8
      </MenuItem>
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        eventKey={9}
        header={false}
      >
        9
      </MenuItem>
      <MenuItem
        bsClass="dropdown"
        disabled={false}
        divider={false}
        eventKey={10}
        header={false}
      >
        10
      </MenuItem>
    </SplitButton>
  </FormGroup>
  <DumbTextGaugeForm
    choices={
      Immutable.List [
        Immutable.Map {
          id: "2233",
          labelEntries: Immutable.List [
          ],
          value: 1,
        },
        Immutable.Map {
          id: "3344",
          labelEntries: Immutable.List [
          ],
          value: 2,
        },
      ]
    }
    handleGaugeChoiceLabelChange={undefined}
  />
  <div
    className="separator"
  />
</div>
`;
